# numerical_model

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE_NOTES_v1.0.0.md  SECURITY.md  data_manifest.yaml  op3_studio.spec  op3_studio_launcher.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
data/: blade_data_U136.csv  integrated_database_1794.csv
docs/: AI_CODE_AUDIT_DEFENSE.md  ANCHOR_OPTUMGX_GUIDE.md  CI_STATUS.md  CODE_EMBED_MANIFEST.md  DECISION_LOG.md  DEVELOPER_NOTES.md  FRAMEWORK.md  HUMAN_REVIEW_WORKBOOK.docx  HUMAN_REVIEW_WORKBOOK.md  MODE_D_DISSIPATION_WEIGHTED.md  OP3_COMPLETE_REVIEW_WORKBOOK.docx  OP3_COMPLETE_REVIEW_WORKBOOK.md  OPTUMGX_BOUNDARY.md  PREFLIGHT_CHECKLIST.md
examples/: anchor_01_basic_capacity.py  anchor_02_installation_check.py  anchor_03_padeye_optimization.py  anchor_04_cyclic_storm.py  anchor_05_moorpy_coupling.py
op3/: __init__.py  _opensees_state.py  composer.py  config.py  cross_compare.py  data_sources.py  fatigue.py  field_reference.py  foundations.py  visualization.py  viz_complete.py  viz_openfast.py  viz_optumgx.py  viz_provenance.py  viz_tier1.py  viz_tier2.py  viz_tier3.py
op3_studio/: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  docker-compose.yml
op3_viz/: __init__.py  compliance.py  dlc_loader.py  geometry.py  op3_results.py  project.py  report.py  results_loader.py
paper/: paper.bib  paper.md
results/: asymmetric_scour_scenarios.json  decision_agent_report_epoch4.md  decision_agent_trajectory.json  sequential_bayesian_8epoch.json
sample_projects/: gunsan_ref4mw.op3proj  iea_15mw_monopile.op3proj  nrel_5mw_oc3_monopile.op3proj
scripts/: build_dlc61_parked_deck.py  calibration_mac.py  calibration_regression.py  calibration_tornado.py  dnv_st_0126_conformance.py  generate_data_manifest.py  generate_examples.py  generate_foundation_data.py  generate_latex_tables.py  iec_61400_3_conformance.py  import_real_optumgx_dissipation.py  oc6_phase2_benchmark.py  pisa_cross_validation.py  pisa_demo_oc3.py  release_validation_report.py  reproduce_all.sh  run_dlc11_partial.py  run_dlc61_parked.py  run_openfast.py  run_pisa_verification.py  session_digest.py  solution_verification.py  test_all_examples.py  test_three_analyses.py  update_appendix_d_shas.py  verify_oc6_phase2.py  (+6 more)
(+477 files in other folders)
